# agente-instacrops

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  setup_database.py
database/: connection.py  db_init.py
notebooks/: notebook.ipynb
src/agents/: main.py
src/agents/agroBrain/: agent.py  state.py
src/agents/agroBrain/nodes/extractor/: node.py  prompt.py
src/agents/agroBrain/nodes/sensorWorker/: node.py  prompt.py  tools.py
src/agents/agroBrain/nodes/weatherWorker/: node.py  prompt.py  tools.py
src/agents/agroBrain/routes/: prompt.py  route.py
src/api/: tools.py
src/ui/: app.py
tests/: conftest.py  test_agro_brain_agent.py  test_database_simple.py  test_sensor_worker.py  test_weather_simple.py
