[project]
name = "agente-instacrops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain[google-genai]>=1.1.3",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "langchain-deepseek>=1.0.1",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "langgraph-cli[inmem]>=0.4.9",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"